fix(Tooltip): Tooltip overflows properly
The default behavior for our tooltip is to try to stay within the viewport of the application. Set
the proper popperjs settings and fix styling.

--- a/.storybook/styles.css
+++ b/.storybook/styles.css
@@ -11,7 +11,3 @@ body,
 .external-preview {
   overflow: hidden;
 }
-
-.bx--tooltip {
-  position: relative;
-}
